--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     install-dependencies:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out repository code
+      - name: checkout repository code
         uses: actions/checkout@v3
       - name: Run installation of dependencies commands
         run: npm install
