--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "jest": "^29.6.2",
+    "save": "^2.9.0",
     "serverless": "^3.34.0"
   },
   "devDependencies": {
