--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,13 +18,11 @@ jobs:
         uses: actions/checkout@v3
       - name: Run installation of dependencies commands
         run: npm install
-  unit-testing:
-    runs-on: ubuntu-lates
+  runs-on: ubuntu-latest
     steps:
-      -name: check out repository code
-       uses: actions/checkout@v3
-      -name: Run installation of dependencies commands
-      run: npm install
-      -name: Run unit testing command
-       run: npm test
-       
+      - name: Check out repository code
+        uses: actions/checkout@v3
+      - name: Run installation of dependencies commands
+        run: npm install
+      - name: Run unit testing command
+        run: npm test
