--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Run installation of dependencies commands
         run: npm install
-  runs-on: ubuntu-latest
+   unit-testing:
+    runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
